fix width of menu and submenu on small nav, update timeline content

--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,8 @@
  }
  
  p {
+     font-size: 14px;
+     line-height: 1.6;
      margin-top: 0;
  }
  /*Left Column*/
@@ -20,6 +22,7 @@
      left: 0;
      -webkit-transform: translateX(0);
      transform: translateX(0);
+     width: 250px;
  }
  /*Header */
  
@@ -30,7 +33,7 @@
  }
  
  .top-nav {
-     margin-left: 300px;
+     margin-left: 250px;
      transition: all .3s ease;
      clear: both;
      overflow: hidden;
@@ -82,7 +85,7 @@
      display: none;
  }
  
- .sm-nav .side-menu li > a > i {
+ .sm-nav .side-menu li> a > i {
      margin-right: 0;
  }
  
@@ -114,11 +117,15 @@
      position: absolute;
      left: 100%;
      top: 0;
-     min-width: 100px;
+     min-width: 250px;
  }
  
  .sm-nav .side-nav .collapsible-body li a {
      padding-left: 18px !important;
+ }
+ 
+ .sm-nav .logo {
+     opacity: 0;
  }
  /* Side Menu */
  
@@ -151,9 +158,11 @@
      font-weight: 300;
      letter-spacing: 0.4px;
      padding: 0 18px;
+     height: auto;
  }
  
- .side-menu li > a > i {
+ .side-nav li>a>i.material-icons {
+     color: #fff;
      margin-right: 1rem;
  }
  
@@ -171,7 +180,7 @@
  
  .menu-child a {
      color: #fff;
-     padding-left: 65px !important;
+     padding-left: 40px !important;
  }
  /* Nav right */
  
@@ -217,7 +226,7 @@
  /* Main Content */
  
  main {
-     padding-left: 300px;
+     padding-left: 250px;
      padding-top: 60px;
  }
  
@@ -331,7 +340,7 @@
  .timeline-item {
      padding-left: 60px;
      padding-right: 0;
-     padding-bottom: 10px;
+     padding-bottom: 20px;
      position: relative;
  }
  
@@ -371,13 +380,14 @@
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
-     font-size: 26px;
+     font-size: 20px;
  }
  
  .date-timeline {
      position: absolute;
      width: 100%;
      left: 60px;
+     top: 10px;
  }
  
  .date-timeline p {
@@ -391,6 +401,14 @@
      top: 10px;
      width: 100%;
      margin-left: 10px;
+ }
+ 
+ .feed-title {
+     clear: both;
+     overflow: hidden;
+     margin-bottom: 20px;
+     margin-left: -0.75rem;
+     margin-right: -0.75rem;
  }
  /* User Form */
  
